objects/License__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>AssetId__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <label>Serial Number</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <formula>TEXT(AssetId__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_for_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sends an email to this contact when new license keys are generated</inlineHelpText>
        <label>Contact for Notification</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>License_Expiration__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expire_for_Email__c</fullName>
        <formula>if(OR((text(License_Expiration__c)=&apos;2299-12-31&apos;),ISBLANK(License_Expiration__c), ISNULL(License_Expiration__c)),&quot;Perpetual&quot;,text(License_Expiration__c))</formula>
        <label>Expire for Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>License Key for Virtual Appliances or GMS</description>
        <inlineHelpText>Don&apos;t edit this field, or the key may not work!</inlineHelpText>
        <label>Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration__c</fullName>
        <label>License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logged__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is a temporary field. Will be removed soon.</description>
        <label>Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityForDisplay__c</fullName>
        <formula>IF((LEFT(Model__c,6)== &apos;ECORCH&apos;),1, Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Number of GMS licenses. Always 1 for VX applinaces</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <formula>AssetId__r.Product_Quote_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalKeyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Key Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>When the license becomes active.</inlineHelpText>
        <label>License Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Contact_for_Notification__c</columns>
        <columns>Expire_for_Email__c</columns>
        <columns>Key__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>license Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>